--- a/modules/gateways/mypaygateway/templates/initiate_failed.html
+++ b/modules/gateways/mypaygateway/templates/initiate_failed.html
@@ -3,7 +3,7 @@
         <div class="alert alert-danger">
             <strong>Error while initiating transaction.</strong>
             <br>
-            Please check your payment gateway settings (Khalti).
+            Please check your MyPay payment gateway settings.
         </div>
     </div>
 </div>
